refactor: add styles

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,53 @@ body {
     font-family: "Poppins", sans-serif;
     margin: 0;
 }
+
+.movie-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.movie {
+    background-color: #373b69;
+    border-radius: 3px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    margin: 1rem;
+    overflow: hidden;
+    position: relative;
+    width: 250px;
+    
+}
+
+.movie img {
+    max-width: 100%;
+}
+.movie-info {
+    max-width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+.movie-info h3 {
+    margin: 0;
+}
+
+.movie-over {
+    background-color: #ffffff;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    bottom: 0;
+    color: #22254b;
+    left: 0;
+    max-height: 100%;
+    overflow: auto;
+    padding: 1rem;
+    position: absolute;
+    right: 0;
+    transform: translateY(182%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.movie:hover .movie-over {
+    transform: translateX(0%);
+}
