--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,29 @@ body {
     margin: 0;
 }
 
+.root {
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    background-color: #373b69;
+    display: flex;
+    justify-content: flex-end;
+    padding: 1rem;
+}
+
+.search {
+    background-color: transparent;
+    border: 2px solid #22254b;
+    border-radius: 50px;
+    color: #22254b;
+    font-family: inherit;
+    font-size: 1.2rem;
+    outline: none;
+    padding: 0.5rem 1.5rem;
+}
+
 .movie-container {
     display: flex;
     flex-wrap: wrap;
